--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -4,6 +4,7 @@ on:
     types:
       - reopened
       - opened
+      - closed
 jobs:
   label_issues:
     runs-on: ubuntu-latest
@@ -15,3 +16,9 @@ jobs:
         with:
           add-labels: "priority"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Label issues
+        uses: andymckay/labeler@1.0.2
+        with:
+          add-labels: "closed"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
