Update and rename main.yml to remove label.yml

--- a/.github/workflows/remove label.yml
+++ b/.github/workflows/remove label.yml
@@ -9,7 +9,7 @@ jobs:
     permissions:
       issues: write
     steps:
-      - name: Label issues
+      - name: Remove labels
         uses: andymckay/labeler@1.0.2
         with:
           remove-labels: "priority"
